<resources>
    <string name="app_name">FootbalApi</string>
    <string name="prev_match">Prev. Match</string>
    <string name="next_match">Next Match</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sab_3_mar_2018">Sab, 3 Mar 2018</string>
    <string name="fc_barcelona">FC Barcelona</string>
    <string name="_2">2</string>
    <string name="vs">VS</string>
    <string name="goals">Goals</string>
    <string name="shoots">Shoots</string>
    <string name="red_card">Red Card</string>
    <string name="yellow_card">Yellow Card</string>
    <string name="lineups">Lineups</string>
    <string name="defense">Defense</string>
    <string name="goal_keeper">Goal Keeper</string>
    <string name="midfield">Midfield</string>
    <string name="forward">Forward</string>
    <string name="subtituties">Subtituties</string>
</resources>
