<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Activity.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/date_match"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/sab_3_mar_2018"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/detail_team_one_badge"
                android:layout_width="108dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="2">

                <ImageView
                    android:id="@+id/iv_team_one_badge"
                    android:layout_width="86dp"
                    android:layout_height="86dp"
                    android:layout_marginStart="16dp" />

                <ProgressBar
                    android:id="@+id/team_one_pb"
                    android:layout_width="86dp"
                    android:layout_height="86dp"
                    android:layout_centerInParent="true" />

                <TextView
                    android:id="@+id/team_one_title_match"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_team_one_badge"
                    android:layout_marginTop="8dp"
                    android:text="@string/fc_barcelona"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <TextView
                android:id="@+id/team_one_point_match"
                android:layout_width="wrap_content"
                android:layout_height="96dp"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:text=""
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/vs_match"
                android:layout_width="wrap_content"
                android:layout_height="96dp"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:text="@string/vs"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/team_two_point_match"
                android:layout_width="wrap_content"
                android:layout_height="96dp"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:text=""
                android:textSize="20sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/detail_team_two_badge"
                android:layout_width="108dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="2">

                <ImageView
                    android:id="@+id/iv_team_two_badge"
                    android:layout_width="86dp"
                    android:layout_height="86dp"
                    android:layout_marginStart="16dp" />

                <ProgressBar
                    android:id="@+id/team_two_pb"
                    android:layout_width="86dp"
                    android:layout_height="86dp"
                    android:layout_centerInParent="true" />

                <TextView
                    android:id="@+id/team_two_title_match"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_team_two_badge"
                    android:layout_marginTop="8dp"
                    android:text="@string/fc_barcelona"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </LinearLayout>

        <View
            android:id="@+id/limit_one"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/team_one_goal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text=""
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/text_goals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/goals" />

            <TextView
                android:id="@+id/team_two_goal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text=""
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/team_one_shoots"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text=""
                android:textAlignment="center" />

            <TextView
                android:id="@+id/text_shoots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/shoots" />

            <TextView
                android:id="@+id/team_two_shoots"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text=""
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/team_one_red_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text=""
                android:textAlignment="center" />

            <TextView
                android:id="@+id/text_red_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/red_card" />

            <TextView
                android:id="@+id/team_two_red_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text=""
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/team_one_yellow_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text=""
                android:textAlignment="center" />

            <TextView
                android:id="@+id/text_yellow_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/yellow_card" />

            <TextView
                android:id="@+id/team_two_yellow_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text=""
                android:textAlignment="center" />

        </LinearLayout>


        <View
            android:id="@+id/limit_two"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:background="#000000" />


        <TextView
            android:id="@+id/lineups"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lineups"
            android:textAlignment="center"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/team_one_goal_keeper"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text=""
                android:textAlignment="center" />

            <TextView
                android:id="@+id/text_goal_keeper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/goal_keeper" />

            <TextView
                android:id="@+id/team_two_goal_keeper"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text=""
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/team_one_defense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text=""
                android:textAlignment="center" />

            <TextView
                android:id="@+id/text_defense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/defense" />

            <TextView
                android:id="@+id/team_two_defense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text=""
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/team_one_midfield"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text=""
                android:textAlignment="center" />

            <TextView
                android:id="@+id/text_midfield"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/midfield" />

            <TextView
                android:id="@+id/team_two_midfield"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text=""
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/team_one_forward"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text=""
                android:textAlignment="center" />

            <TextView
                android:id="@+id/text_forward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/forward" />

            <TextView
                android:id="@+id/team_two_forward"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text=""
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/team_one_subtituties"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text=""
                android:textAlignment="center" />

            <TextView
                android:id="@+id/text_subtituties"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/subtituties" />

            <TextView
                android:id="@+id/team_two_subtituties"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text=""
                android:textAlignment="center" />

        </LinearLayout>


    </LinearLayout>

</ScrollView>
