<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_match"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/date_match"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/sab_3_mar_2018"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/team_one_title_match"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/fc_barcelona"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="start|center"
                app:layout_constraintEnd_toStartOf="@id/team_one_point_match"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/date_match" />

            <TextView
                android:id="@+id/team_one_point_match"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:text=""
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/vs_match"
                app:layout_constraintStart_toEndOf="@id/team_one_title_match"
                app:layout_constraintTop_toBottomOf="@id/date_match" />

            <TextView
                android:id="@+id/vs_match"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginTop="8dp"
                android:text="@string/vs"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@id/team_two_point_match"
                app:layout_constraintStart_toEndOf="@id/team_one_point_match"
                app:layout_constraintTop_toBottomOf="@id/date_match" />

            <TextView
                android:id="@+id/team_two_point_match"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:text=""
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/team_two_title_match"
                app:layout_constraintStart_toEndOf="@id/vs_match"
                app:layout_constraintTop_toBottomOf="@id/date_match" />

            <TextView
                android:id="@+id/team_two_title_match"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/fc_barcelona"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="end|center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/team_two_point_match"
                app:layout_constraintTop_toBottomOf="@id/date_match" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>